; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_window.c_glfwGetWindowOpacity.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_window.c_glfwGetWindowOpacity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @glfwGetWindowOpacity(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  store i32* %4, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp ne i32* %5, null
  %7 = zext i1 %6 to i32
  %8 = call i32 @assert(i32 %7)
  %9 = call i32 @_GLFW_REQUIRE_INIT_OR_RETURN(float 1.000000e+00)
  %10 = load i32*, i32** %3, align 8
  %11 = call float @_glfwPlatformGetWindowOpacity(i32* %10)
  ret float %11
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @_GLFW_REQUIRE_INIT_OR_RETURN(float) #1

declare dso_local float @_glfwPlatformGetWindowOpacity(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
